# enterprise-solutions

./: .gitattributes  .gitignore
ApiPlay/: README.md  pom.xml
CloudITWebDeploy/: Dockerfile  enhancehtml.py  facebook.js  kube-config  nginx-deployment.yaml  script.html  sharebutton.html
Greeting/: README.md  pom.xml
LongestString/: LongestString.sln  Program.cs
MicroservicePlayground/: pom.xml
NapTimeAlarm/: build.gradle
Permute/: Permute0.sln  Program.cs
googlecloud/ml-invest-advisory/: .env.example  README.md  generate-llm-prompt.py  pyproject.toml
googlecloud/ml-invest-advisory/deployment/: deploy.py  grant_permissions.sh  run.py
googlecloud/ml-invest-advisory/eval/: test_eval.py
googlecloud/ml-invest-advisory/eval/data/: conversation.test.json  test_config.json
googlecloud/ml-invest-advisory/local_llm/: README.md  analyze-portfolio.sh  generate-llm-prompt.py  portfolio_holdings.json  prompt_template.txt
googlecloud/ml-invest-advisory/local_llm/executors/: gen-daily-portfolio-reports.sh  gen-flash-insights-portfolio-reports.sh  gen-investment-report-realtime-nonstop.sh  gen-investment-report-realtime.sh
googlecloud/ml-invest-advisory/local_llm/prompt_templates/: daily_report_prompt_template.txt  flash-insights-report-template.txt
googlecloud/ml-invest-advisory/market_symbol_quotes/: deploy.sh  gcp_data_access.py  main.py  requirements.txt  sinotrade.py  tradestation.py
googlecloud/ml-invest-advisory/rag/: agent.py  prompts.py
googlecloud/ml-invest-advisory/rag/shared_libraries/: create_rag_corpus.py  prepare_corpus_and_data.py
(+518 files in other folders)
